[package]
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "relay-music"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
nb = "1.0.0"
embedded-hal = {version = "0.2.4", features = ["unproven"]}
lazy_static = {version = "1.4.0", features = ["spin_no_std"] }

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["stm32f103", "rt"]

[dependencies.defmt]
git = "https://github.com/knurling-rs/defmt"
rev = "a6dc0904872cd3f4aee5125dffc17723df3c9393"

[dependencies.defmt-rtt]
git = "https://github.com/knurling-rs/defmt"
rev = "a6dc0904872cd3f4aee5125dffc17723df3c9393"

[dependencies.panic-probe]
# git = "https://github.com/knurling-rs/probe-run"
# branch = "main"
path = "C:/Users/santo/src/probe-run/panic-probe"
# enable the `print-defmt` feature for more complete test output
features = ["print-defmt"]

[[bin]]
name = "relay-music"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[features]
default = [
  "defmt-trace",
]

# do NOT modify these features
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
